Fix: missing gap space on login

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -30,6 +30,13 @@ input[type="submit"] {
     background-color: var(--white);
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;  
+}
+
 .error-text {
     font-size: 0.9rem;
     color: var(--danger-color);
